--- a/nextrated/styles.css
+++ b/nextrated/styles.css
@@ -1,7 +1,11 @@
-nav{
+.navbar{
     background: rgb(94, 167, 226);
     color: white;
-    z-index: 2;
+    position: fixed;
+    width: 100%;
+    top: 0%;
+    left: 0;
+    z-index: 1;
 }
 
 nav img{
@@ -13,7 +17,7 @@ nav img{
     height: 100%; /* Full-height: remove this if you want "auto" height */
     width: 200px; /* Set the width of the sidebar */
     position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-    z-index: 1; /* Stay on top */
+    /*z-index: 0; /* Stay on top */
     top: 10%; /* Stay at the top */
     left: 0;
     background-color: rgb(17, 17, 17); /* Black */
@@ -46,3 +50,8 @@ nav img{
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
   } 
+.request-form{
+    margin-top: 10%;
+    margin-left: 25%;
+    padding-bottom: 100px;
+}
